@startuml mon_mint_soldier_draw

class MonMintSoldier {
  - sprites: BufferedImage[][]
  - attackSprites: BufferedImage[][]
  - axeSprites: BufferedImage[][]
  - DIRECTIONS: String[]
  - ATTACK_DIRECTIONS: String[]
  - AXE_DIRECTIONS: String[]
  - SPRITE_COUNT: int
  + getWorldX(): int
  + getWorldY(): int
  + getDirection(): String
  + getAttackDirection(): String
  + getSpriteNum(): int
  + getAttacking(): boolean
  + getInvincible(): boolean
  + getCurrentWeapon(): ObjAxe
  + draw(g2:Graphics2D): void
}

class FrameApp {
  + getTileSize(): int
}

class GameWindow {
  + getPlayer(): Player
}

class Player {
  + getWorldX(): int
  + getWorldY(): int
  + getScreenX(): int
  + getScreenY(): int
}

class ObjAxe {
  + getType(): Object
}

class Graphics2D {
  + setComposite(c:Composite): void
  + getComposite(): Composite
  + drawImage(img:BufferedImage, x:int, y:int, w:int, h:int, obs:Object): void
}

MonMintSoldier --> FrameApp : queries
MonMintSoldier --> GameWindow : uses
MonMintSoldier --> Player : queries
MonMintSoldier --> ObjAxe : queries
MonMintSoldier --> Graphics2D : uses

note right of MonMintSoldier
**Notes**
- 無敵時はCompositeを変更して半透明で描画する。
- 非攻撃時は方向に応じた歩行スプライトを通常サイズで描画する。
- 攻撃時は武器種別で axeSprites または attackSprites を選択する。
- 攻撃スプライトは方向に応じて幅または高さを2倍にして描画する。
- 攻撃スプライトの描画位置は方向によりオフセットする。
- 必要に応じて drawHpBarIfNeeded を呼び出す。

- When invincible: change the Composite to render the monster semi‑transparent.
- When not attacking: draw the walking sprite for the current direction at normal size.
- When attacking: select axeSprites or attackSprites based on the weapon type.
- Attack sprite scaling: double the width or height depending on the attack direction before drawing.
- Attack sprite offset: adjust the draw position based on direction so the enlarged sprite aligns correctly.
- HP bar: call drawHpBarIfNeeded when appropriate.
end note

@enduml